home-cluster/nodered/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodered
  namespace: nodered
spec:
  selector:
    app: nodered
  ports:
  - port: 1880
    targetPort: 1880
  type: ClusterIP
